--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -12,15 +12,17 @@
 <body>
   
   <main>
-      <div><img src="images/logo.svg" alt="" class="logo"></div>
-      <div class="block" ><img src="images/illustration-mockups.svg" alt="" class="imagem"></div>
+      <div class="bloco">
+        <div class="block1"><img src="images/logo.svg" alt="logo" class="logo"></div>
+        <div class="block2"><img src= "images/illustration-mockups.svg" alt="telas" class="imagem"></div>
+      </div>
     <section class="text">
       <div>
         <h1 class="title">Build The Community <br>Your Fans Will Love</h1>
       </div>
       <div class="description">
-        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-        Create connections with your users as you engage in genuine discussion.</p>
+        <p>Huddle re-imagines the way we build <br> communities. You have a voice, but so <br> does your audience. 
+        Create connections <br>with your users as you engage in <br>genuine discussion.</p>
       </div>
       <div>
         <button>Register</button>
