--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -6,16 +6,16 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css" media="all">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/16a9709a8b.js" crossorigin="anonymous"></script>
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 </head>
 <body>
-  
+  <header class="cabecalho">
+    <img src="images/logo.svg" alt="logo" class="logo">
+  </header>
   <main>
-      <div class="bloco">
-        <div class="block1"><img src="images/logo.svg" alt="logo" class="logo"></div>
-        <div class="block2"><img src= "images/illustration-mockups.svg" alt="telas" class="imagem"></div>
-      </div>
+    <img src= "images/illustration-mockups.svg" alt="telas" class="imagem">
     <section class="text">
       <div>
         <h1 class="title">Build The Community <br>Your Fans Will Love</h1>
@@ -24,13 +24,13 @@
         <p>Huddle re-imagines the way we build <br> communities. You have a voice, but so <br> does your audience. 
         Create connections <br>with your users as you engage in <br>genuine discussion.</p>
       </div>
-      <div>
+      <div class="register">
         <button>Register</button>
       </div >
-      <div class="icones">
-      <div>icone ig</div>
-      <div>icone fb</div>
-      <div>icone tt</div>
+      <div class="icon">
+      <div class="instagram"><i class="fa-brands fa-instagram"></i></div>
+      <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
+      <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
       </div>
     </section>
   </main>
