--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="cabecalho">
-    <img src="images/logo.svg" alt="logo" class="logo">
+    <img src="images/logo.svg" alt="logo" class="logo"> 
   </header>
   <main>
     <img src= "images/illustration-mockups.svg" alt="telas" class="imagem">
@@ -21,12 +21,13 @@
         <h1 class="title">Build The Community <br>Your Fans Will Love</h1>
       </div>
       <div class="description">
-        <p>Huddle re-imagines the way we build <br> communities. You have a voice, but so <br> does your audience. 
-        Create connections <br>with your users as you engage in <br>genuine discussion.</p>
+        <p>Huddle re-imagines the way we build  communities. You have <br> voice, but so  does your audience. 
+        Create connections with <br> your users as you engage in genuine discussion.</p>
       </div>
       <div class="register">
         <button>Register</button>
       </div >
+      
       <div class="icon">
       <div class="instagram"><i class="fa-brands fa-instagram"></i></div>
       <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
