--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -28,12 +28,15 @@
         <button>Register</button>
       </div >
       
-      <div class="icon">
+      
+    </section>
+  </main>
+  <footer>
+    <div class="icon">
       <div class="instagram"><i class="fa-brands fa-instagram"></i></div>
       <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
       <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
       </div>
-    </section>
-  </main>
+  </footer>
 </body>
 </html>
