--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -15,19 +15,20 @@
     <img src="images/logo.svg" alt="logo" class="logo"> 
   </header>
   <main>
-    <img src= "images/illustration-mockups.svg" alt="telas" class="imagem">
-    <section class="text">
-      <div>
-        <h1 class="title">Build The Community <br>Your Fans Will Love</h1>
-      </div>
-      <div class="description">
-        <p>Huddle re-imagines the way we build  communities. You have <br> voice, but so  does your audience. 
-        Create connections with <br> your users as you engage in genuine discussion.</p>
-      </div>
+    <div class="father">
+      <img src= "images/illustration-mockups.svg" alt="telas" class="imagem">
+      <section class="text">
+        <div>
+          <h1 class="title">Build The Community <br>Your Fans Will Love</h1>
+        </div>
+        <div class="description">
+          <p>Huddle re-imagines the way we build  communities. You have <br> voice, but so  does your audience.
+          Create connections with <br> your users as you engage in genuine discussion.</p>
+        </div>
       <div class="register">
         <button>Register</button>
       </div >
-      
+    </div> 
       
     </section>
   </main>
