--- a/social-section/index.html
+++ b/social-section/index.html
@@ -92,7 +92,9 @@
         </div>
       </section>
     </main> 
-    
     </div>
+    <footer class="bottom">
+      
+    </footer>
   </body>
 </html>
