--- a/social-section/index.html
+++ b/social-section/index.html
@@ -23,8 +23,7 @@
           <h1 class="title">10,000+ of our <br>users love our products.</h1>
         </div>
         <div>
-          <p class="paragraph">We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.</p>
+          <p class="paragraph">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
         </div>
       </section>
       <section class="second">
