--- a/social-section/index.html
+++ b/social-section/index.html
@@ -18,80 +18,84 @@
   </head>
   <body>
     <main>
-      <section class="begin">
-        <div>
-          <h1 class="title">10,000+ of our <br>users love our products.</h1>
-        </div>
-        <div>
-          <p class="paragraph">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
-        </div>
+        <section class="begin">
+          <div class="intro">
+            <div>
+              <h1 class="title">10,000+ of our <br>users love our products.</h1>
+            </div>
+            <div>
+              <p class="paragraph">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
+            </div>
+          </div>
+          <div class="rate">
+            <div class="review">
+              <div class="stars">
+                <img src="images/icon-star.svg" alt="star" class="star1">
+                <img src="images/icon-star.svg" alt="star" class="star2">
+                <img src="images/icon-star.svg" alt="star" class="star3">
+                <img src="images/icon-star.svg" alt="star" class="star4">
+                <img src="images/icon-star.svg" alt="star" class="star5">
+              </div>
+              <p>Rated 5 Stars in Reviews</p>
+            </div>
+            <div class="guru">
+              <div class="stars">
+                <img src="images/icon-star.svg" alt="star" class="star1">
+                <img src="images/icon-star.svg" alt="star" class="star2">
+                <img src="images/icon-star.svg" alt="star" class="star3">
+                <img src="images/icon-star.svg" alt="star" class="star4">
+                <img src="images/icon-star.svg" alt="star" class="star5">
+              </div>
+              <p>Rated 5 Stars in Report Guru</p>
+            </div>
+            <div class="best-tech">
+              <div class="stars">
+                <img src="images/icon-star.svg" alt="star" class="star1">
+                <img src="images/icon-star.svg" alt="star" class="star2">
+                <img src="images/icon-star.svg" alt="star" class="star3">
+                <img src="images/icon-star.svg" alt="star" class="star4">
+                <img src="images/icon-star.svg" alt="star" class="star5">
+              </div>
+              <p>Rated 5 Stars in BestTech</p>
+            </div>
+          </div>
       </section>
-      <section class="second">
-        <div class="review">
-          <div class="stars">
-            <img src="images/icon-star.svg" alt="star" class="star1">
-            <img src="images/icon-star.svg" alt="star" class="star2">
-            <img src="images/icon-star.svg" alt="star" class="star3">
-            <img src="images/icon-star.svg" alt="star" class="star4">
-            <img src="images/icon-star.svg" alt="star" class="star5">
-          </div>
-          <p>Rated 5 Stars in Reviews</p>
-        </div>
-        <div class="guru">
-          <div class="stars">
-            <img src="images/icon-star.svg" alt="star" class="star1">
-            <img src="images/icon-star.svg" alt="star" class="star2">
-            <img src="images/icon-star.svg" alt="star" class="star3">
-            <img src="images/icon-star.svg" alt="star" class="star4">
-            <img src="images/icon-star.svg" alt="star" class="star5">
-          </div>
-          <p>Rated 5 Stars in Report Guru</p>
-        </div>
-        <div class="best-tech">
-          <div class="stars">
-            <img src="images/icon-star.svg" alt="star" class="star1">
-            <img src="images/icon-star.svg" alt="star" class="star2">
-            <img src="images/icon-star.svg" alt="star" class="star3">
-            <img src="images/icon-star.svg" alt="star" class="star4">
-            <img src="images/icon-star.svg" alt="star" class="star5">
-          </div>
-          <p>Rated 5 Stars in BestTech</p>
-        </div>
-        <div class="block">
-          <div class="person">
-            <img src="images/image-colton.jpg" alt="colton" class="photo">
-            <div class="name">
-              <h4>Colton Smith</h4>
-              <p class="sub">Verified Buyer</p>
+      </div>
+          <section class="box">
+            <div class="block card1">
+                <div class="person">
+                  <img src="images/image-colton.jpg" alt="colton" class="photo">
+                  <div class="name">
+                    <h4>Colton Smith</h4>
+                    <p class="sub">Verified Buyer</p>
+                </div>
+                <p class="text">"We needed the same printed design as the one we had ordered a week prior.
+                  Not only did they find the original order, but we also received it in time.
+                  Excellent!"</p>
+              </div>
             </div>
-          </div>
-          <p class="text">"We needed the same printed design as the one we had ordered a week prior.
-            Not only did they find the original order, but we also received it in time.
-            Excellent!"</p>
-        </div>
-        <div class="block">
-          <div class="person">
-            <img src="images/image-irene.jpg" alt="" class="photo">
-            <div class="name">
-              <h4>Irene Roberts</h4>
-              <p class="sub">Verified Buyer</p>
+            <div class="block card2">
+                <div class="person">
+                  <img src="images/image-irene.jpg" alt="" class="photo">
+                  <div class="name">
+                    <h4>Irene Roberts</h4>
+                    <p class="sub">Verified Buyer</p>
+                </div>
+                <p class="text">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
+              </div>
             </div>
-          </div>
-          <p class="text">"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
-        </div>
-        <div class="block" class="last">
-          <div class="person">
-            <img src="images/image-anne.jpg" alt="" class="photo">
-            <div class="name">
-              <h4>Anne Wallace</h4>
-              <p class="sub">Verified Buyer</p>
+            <div class="block card3">
+                <div class="person">
+                  <img src="images/image-anne.jpg" alt="" class="photo">
+                  <div class="name">
+                    <h4>Anne Wallace</h4>
+                    <p class="sub">Verified Buyer</p>
+                </div>
+                <p class="text">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
+              </div>
             </div>
-          </div>
-          <p class="text">"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
-        </div>
-      </section>
+          </section>
     </main> 
-    </div>
     <footer class="bottom">
       
     </footer>
